src/objects/Integrations_Message__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>AnalysP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oblicore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Status__c</fullName>
        <label>Error Status</label>
        <picklist>
            <picklistValues>
                <fullName>Business Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interface_Method_Name__c</fullName>
        <description>This field will store the name of the method from which this record has been created.</description>
        <label>Interface Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Body__c</fullName>
        <label>Message Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resend_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Tracker__c</fullName>
        <description>Track the waiting time.(i.e 60sec,120 sec,300 sec)</description>
        <label>Time Tracker</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <externalId>true</externalId>
        <label>UID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Integrations Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Error_Status__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AnalysP_Queue</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Error_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>AnalysP</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <filters>
            <field>Error_Status__c</field>
            <operation>equals</operation>
            <value>Technical Error</value>
        </filters>
        <label>AnalysP Queue</label>
    </listViews>
    <listViews>
        <fullName>B2B_Queue</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Error_Status__c</columns>
        <columns>Status_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>B2B</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <filters>
            <field>Error_Status__c</field>
            <operation>equals</operation>
            <value>Technical Error</value>
        </filters>
        <label>B2B Queue</label>
    </listViews>
    <listViews>
        <fullName>MEC_Error_Queue</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Error_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>MEC</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <filters>
            <field>Error_Status__c</field>
            <operation>equals</operation>
            <value>Technical Error</value>
        </filters>
        <label>MEC Error Queue</label>
    </listViews>
    <listViews>
        <fullName>NID_Queue</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Error_Status__c</columns>
        <columns>Status_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>NID</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <filters>
            <field>Error_Status__c</field>
            <operation>equals</operation>
            <value>Technical Error</value>
        </filters>
        <label>NID Queue</label>
    </listViews>
    <listViews>
        <fullName>Oblicore_Queue</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Error_Status__c</columns>
        <columns>Status_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Oblicore</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <filters>
            <field>Error_Status__c</field>
            <operation>equals</operation>
            <value>Technical Error</value>
        </filters>
        <label>Oblicore Queue</label>
    </listViews>
    <listViews>
        <fullName>SMS_Gateway_Queue</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Error_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>SMS Gateway</value>
        </filters>
        <filters>
            <field>Error_Status__c</field>
            <operation>equals</operation>
            <value>Technical Error</value>
        </filters>
        <label>SMS Gateway Queue</label>
    </listViews>
    <nameField>
        <displayFormat>IM-{0000}</displayFormat>
        <label>Integrations Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>